# teams-attendant

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml.example
config/profiles/: active.yaml  balanced.yaml  passive.yaml
src/teams_attendant/: __init__.py  cli.py  config.py  errors.py  orchestrator.py
src/teams_attendant/agent/: context.py  core.py  foundry_auth.py  llm.py  openai_llm.py  profiles.py  summarizer.py  vision.py
src/teams_attendant/audio/: __init__.py  capture.py  devices.py  playback.py  speech_auth.py  stt.py  tts.py
src/teams_attendant/browser/: __init__.py  auth.py  chat.py  meeting.py  screen.py  transcript.py
src/teams_attendant/utils/: __init__.py  events.py  logging.py  retry.py
tests/: conftest.py  test_config.py  test_errors.py  test_events.py  test_integration.py  test_orchestrator.py
tests/test_agent/: test_context.py  test_core.py  test_llm.py  test_openai_llm.py  test_profiles.py  test_summarizer.py  test_vision.py
tests/test_audio/: test_capture.py  test_devices.py  test_playback.py  test_stt.py  test_tts.py
tests/test_browser/: test_auth.py  test_chat.py  test_meeting.py  test_screen.py  test_transcript.py
tests/test_cli/: test_cli.py
tests/test_utils/: test_logging.py  test_retry.py
